--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
+body {
+  padding: 20px;
+}
 text {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 11px;
   pointer-events: none;
 }
+input {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  margin-bottom: 12px;
+}
+button {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  margin-bottom: 12px;
+}
+
 #chart {
   position: absolute;
   width: 500px;
   height: 500px;
   top: 0;
-  left: 0;
+  left: 20;
 }
 #question {
   position: absolute;
